# intrusion-detection-svm-vs-multi-svm

./: .gitignore  Lokesh_Classification1m-latest3_Mycode-ToSend-Copy1.ipynb  README.md  extract_figures_from_pdfs.py  generate_results_report.py  ids_svm.py  lokesh_classification1m_latest3_mycode_tosend_copy1.py  nsl_kdd_svm_combined.py  plot_paper_comparison.py  pyproject.toml  requirements.txt  train.ipynb  train.py
paper_images/: detailed-meta-svm-architecture.xml  meta-svm-architecture.xml
