[project]
name = "nsl-kdd-svm"
version = "0.1.0"
description = "NSL-KDD SVM/Ensemble SVM experiment"
authors = [
    {name = "Lokesh Karanam",email = "sunnylokesh3@gmail.com"}
]
readme = "README.md"

requires-python = ">=3.13,<4.0"
dependencies = [
     "numpy",
       "pandas",
       "scikit-learn",
       "imbalanced-learn (>=0.13.0,<0.14.0)",
       "matplotlib (>=3.10.3,<4.0.0)",
       "seaborn (>=0.13.2,<0.14.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api" 